erDiagram
    %% ===== 프로젝트 영역 =====
    Project {
        Long id PK
        String name
        String apiKey
        Long userId FK
    }

    %% ===== PullRequest 핵심 영역 =====
    PullRequest {
        Long id PK
        Long projectId FK
        int pullRequestNumber
        String title
        PullRequestState state "DRAFT/OPEN/MERGED/CLOSED"
        String authorGithubId
        String link
        int changedFileCount "PullRequestChangeStats VO"
        int additionCount "PullRequestChangeStats VO"
        int deletionCount "PullRequestChangeStats VO"
        int commitCount
        LocalDateTime pullRequestCreatedAt "PullRequestTiming VO"
        LocalDateTime mergedAt "PullRequestTiming VO"
        LocalDateTime closedAt "PullRequestTiming VO"
    }

    PullRequestStateHistory {
        Long id PK
        Long pullRequestId FK
        PullRequestState previousState
        PullRequestState newState
        LocalDateTime changedAt
    }

    PullRequestContentHistory {
        Long id PK
        Long pullRequestId FK
        int changedFileCount "PullRequestChangeStats VO"
        int additionCount "PullRequestChangeStats VO"
        int deletionCount "PullRequestChangeStats VO"
        int commitCount
        LocalDateTime changedAt
    }

    %% ===== 라벨 영역 =====
    PullRequestLabel {
        Long id PK
        Long pullRequestId FK
        String labelName
        LocalDateTime labeledAt
    }

    PullRequestLabelHistory {
        Long id PK
        Long pullRequestId FK
        String labelName
        PullRequestLabelAction action "ADDED/REMOVED"
        LocalDateTime changedAt
    }

    %% ===== 파일 변경 영역 =====
    PullRequestFile {
        Long id PK
        Long pullRequestId FK
        String fileName
        FileChangeType changeType "MODIFIED/ADDED/REMOVED/RENAMED"
        int additions "FileChanges VO"
        int deletions "FileChanges VO"
    }

    PullRequestFileHistory {
        Long id PK
        Long pullRequestId FK
        String fileName
        String previousFileName "nullable - RENAMED only"
        FileChangeType changeType
        int additions "FileChanges VO"
        int deletions "FileChanges VO"
        LocalDateTime changedAt
    }

    %% ===== 커밋 영역 =====
    Commit {
        Long id PK
        Long pullRequestId FK
        String commitSha
        LocalDateTime committedAt
    }

    %% ===== 리뷰어 요청 영역 =====
    RequestedReviewer {
        Long id PK
        Long pullRequestId FK
        String githubMention
        Long githubUid
        LocalDateTime requestedAt
    }

    RequestedReviewerHistory {
        Long id PK
        Long pullRequestId FK
        String githubMention
        Long githubUid
        ReviewerAction action "REQUESTED/REMOVED"
        LocalDateTime changedAt
    }

    %% ===== 리뷰 영역 =====
    Review {
        Long id PK
        Long pullRequestId FK
        String reviewerGithubId
        String reviewState "approved/changesRequested/commented"
        String commitSha "리뷰한 커밋 버전"
        Integer commentCount
        LocalDateTime submittedAt
        LocalDateTime firstCommentedAt
        LocalDateTime lastCommentedAt
    }

    ReviewComment {
        Long id PK
        Long reviewId FK
        String body
        Boolean isResolved
        LocalDateTime commentedAt
    }

    %% ===== 이슈 영역 =====
    Issue {
        Long id PK
        Long projectId FK
        Integer issueNumber
        LocalDateTime issueCreatedAt
        LocalDateTime issueClosedAt
    }

    PullRequestClosingIssue {
        Long id PK
        Long pullRequestId FK
        Long issueId FK
    }

    %% ===== 슬랙 연동 영역 =====
    SlackNotification {
        Long id PK
        Long pullRequestId FK
        String reviewerGithubId
        LocalDateTime reviewScheduledAt
        Boolean isReviewFulfilled
        LocalDateTime pullRequestNotifiedAt
        Integer scheduleCancelCount
        LocalDateTime reviewTimeSelectedAt
        Integer scheduleChangeCount
    }

    %% ===== 관계 정의 =====
    Project ||--o{ PullRequest : "has"
    Project ||--o{ Issue : "has"

    PullRequest ||--o{ PullRequestStateHistory : "has"
    PullRequest ||--o{ PullRequestContentHistory : "has"
    PullRequest ||--o{ PullRequestLabel : "has"
    PullRequest ||--o{ PullRequestFile : "has"
    PullRequest ||--o{ PullRequestFileHistory : "has"
    PullRequest ||--o{ Commit : "has"
    PullRequest ||--o{ RequestedReviewer : "has"
    PullRequest ||--o{ RequestedReviewerHistory : "has"
    PullRequest ||--o{ Review : "has"
    PullRequest ||--o{ PullRequestClosingIssue : "closes"
    PullRequest ||--o{ SlackNotification : "has"

    PullRequest ||--o{ PullRequestLabelHistory : "has"
    Review ||--o{ ReviewComment : "has"
    Issue ||--o{ PullRequestClosingIssue : "closedBy"
